--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 title: Javier París Uhryn 
 description: Storage of my public works, achivements and personal trajectory
+
+theme: jekyll-theme-cayman
