--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Javier París Uhryn 
+title: Javier Paris Uhryn 
 description: Storage of my public works, achivements and personal trajectory
