Change title so it shows name
Signed-off-by: jparisu <javier.paris.u@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Javier Paris Uhryn 
+title: My Personal Space
 description: Storage of my public works, achivements and personal trajectory
